modify code and tests